--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,23 @@
 {
-   "workbench.colorCustomizations": {
-      "commandCenter.border": "#e7e7e799",
-      "titleBar.activeBackground": "#614568",
-      "titleBar.activeForeground": "#e7e7e7",
-      "titleBar.inactiveBackground": "#61456899",
-      "titleBar.inactiveForeground": "#e7e7e799"
-   },
-   "peacock.color": "#614568"
+	"workbench.colorCustomizations": {
+		"commandCenter.border": "#e7e7e799",
+		"titleBar.activeBackground": "#614568",
+		"titleBar.activeForeground": "#e7e7e7",
+		"titleBar.inactiveBackground": "#61456899",
+		"titleBar.inactiveForeground": "#e7e7e799"
+	},
+	"peacock.color": "#614568",
+	"folder-color.pathColors": [
+		{
+			"folderPath": "DALLAS SYNC\\backend\\",
+			"color": "foldercolorizer.color_cccc66"
+		},
+		{
+			"folderPath": "DALLAS SYNC\\.vscode\\"
+		},
+		{
+			"folderPath": "DALLAS SYNC\\frontend\\",
+			"color": "foldercolorizer.color_9999cc"
+		}
+	]
 }
