feat: add initial database migration and schema for Users table chore: update Docker Compose files for production and development environments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
 		"titleBar.inactiveBackground": "#61456899",
 		"titleBar.inactiveForeground": "#e7e7e799"
 	},
+	"editor.formatOnSave": true,
 	"peacock.color": "#614568",
 	"folder-color.pathColors": [
 		{
