--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -7,7 +5,7 @@ services:
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: dallas@root
+      POSTGRES_PASSWORD: dallasroot
     ports:
       - "5432:5432"
     volumes:
