--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.4",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.4",
     "@nestjs/platform-express": "^11.1.4",
     "@prisma/client": "^6.12.0",
