--- a/backend/package.json
+++ b/backend/package.json
@@ -60,6 +60,9 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
   },
+  "prisma": {
+    "schema": "src/infra/database/prisma/schema.prisma"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
