--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,5 +1,8 @@
 {
-  "semi": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "semi": false,
+  "printWidth": 100,
+  "tabWidth": 2
 }
